[package]
name = "muta-sdk"
version = "0.1.0"
authors = ["huwenchao <me@huwenchao.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
reqwest = { version = "0.10", features = ["json"] }
serde = "1.0"
hex = "0.4"
muta-protocol = { git = "https://github.com/nervosnetwork/muta.git", tag = "v0.2.0-beta.1" }
common-crypto = { git = "https://github.com/nervosnetwork/muta.git", tag = "v0.2.0-beta.1" }
serde_json = "1.0"
bytes = "0.5"
rand = "0.7"
tiny-bip39 = "0.7"
tiny-hderive = "0.2.1"
rlp = "0.4"

[dev-dependencies]
tokio = { version = "0.2", features = ["full"] }

[[example]]
name = "send-transaction"
crate-type = ["bin"]
